<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WaterActivity">



    <LinearLayout
        android:id="@+id/waterGore"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waterHeadingTxt"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>



    <Button
        android:id="@+id/addWaterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_waterBtn"
        app:layout_constraintTop_toBottomOf="@id/waterGore"
        app:layout_constraintBottom_toTopOf="@id/upaliObavijesti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="25sp"
        />

    <Switch
        android:id="@+id/upaliObavijesti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OBAVIJESTI "
        android:textSize="40dp"
        app:layout_constraintTop_toBottomOf="@id/waterGore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/waterPod"
        tools:ignore="UseSwitchCompatOrMaterialXml" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hydration Level, kolko sam vode popio do sad"
        app:layout_constraintTop_toBottomOf="@id/upaliObavijesti"
        app:layout_constraintBottom_toTopOf="@id/waterPod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:textStyle="italic"
        android:textColor="@color/blue"
        />

    <LinearLayout
        android:id="@+id/waterPod"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/blue"
        android:gravity="center">

        <ImageView
            android:id="@+id/homeButtonIMG"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/home_logo"
            android:layout_marginStart="35dp"/>

        <ImageView
            android:id="@+id/foodButtonIMG"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:text="@string/foodBtn"
            app:srcCompat="@drawable/food_logo">

        </ImageView>

        <ImageView
            android:id="@+id/profileButtonIMG"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/profile_logo"
            android:layout_marginEnd="35dp"
            android:text="@string/profileBtn"
            >

        </ImageView>


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>