<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodActivity">





    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/profilePod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodGore" >


    </androidx.recyclerview.widget.RecyclerView>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center">

        <ImageView
            android:id="@+id/foodImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_gravity="start"
            android:src="@drawable/water_logo"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/foodNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Food Name"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>




    <LinearLayout
        android:id="@+id/foodGore"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foodHeadingTxt"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profilePod"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/blue"
        android:gravity="center">

        <ImageView
            android:id="@+id/waterButtonIMG"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/water_logo"
            android:layout_marginStart="35dp"/>

        <ImageView
            android:id="@+id/homeButtonIMG"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:text="@string/foodBtn"
            app:srcCompat="@drawable/home_logo">

        </ImageView>

        <ImageView
            android:id="@+id/profileButtonIMG"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/profile_logo"
            android:layout_marginEnd="35dp"
            android:text="@string/profileBtn"
            >

        </ImageView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>