<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PocetnaActivity">



    <LinearLayout
        android:id="@+id/bojaVrh"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pocetnaNaslovTxt"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>






    <LinearLayout
        android:id="@+id/waterFoodLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/bojaVrh"
        android:layout_marginTop="150dp"
        android:gravity="center">

        <TextView
            android:id="@+id/calorieNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0kcal / 3000kcal"
            android:textSize="40sp"
            android:textColor="@color/blue"
            />

        <TextView
            android:id="@+id/waterNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="popijeno vode: "
            android:textSize="40sp"
            android:textColor="@color/blue"
            />
    </LinearLayout>




    <LinearLayout
        android:id="@+id/bojaPod"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/blue"
        android:gravity="center"
        >


        <ImageView
            android:id="@+id/waterButtonIMG"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/water_logo"
            android:layout_marginStart="35dp"/>

        <ImageView
            android:id="@+id/foodButtonIMG"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:text="@string/foodBtn"
            app:srcCompat="@drawable/food_logo">

        </ImageView>

        <ImageView
            android:id="@+id/profileButtonIMG"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/profile_logo"
            android:layout_marginEnd="35dp"
            android:text="@string/profileBtn"
            >

        </ImageView>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="'Random Quote'"
        app:layout_constraintTop_toBottomOf="@id/waterFoodLayout"
        app:layout_constraintBottom_toTopOf="@id/bojaPod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="italic"/>




</androidx.constraintlayout.widget.ConstraintLayout>